# product-mapping-dsp

./: .gitignore  README.md  Webscraper  combi.py  computer_vision_model.ipynb  image_augmentation.py  model.py  model_inference.py  pyproject.toml  scrape-chips.py  train_model.py  webscraper.py
src/: config.py  data_processing.py  example.py  model_inference.py  model_testing.py  model_training.py  webscraper.py
src/data/: retailer_products.csv  salling_products.csv
