[tool.poetry]
name = "product-mapping-dsp"
version = "0.1.0"
description = ""
authors = ["maltheberk <66491371+maltheberk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
