[tool.poetry]
name = "product-mapping-dsp"
version = "0.1.0"
description = ""
authors = ["maltheberk <66491371+maltheberk@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = { version = "^2.15.0", markers = "platform_system=='Darwin' and platform_machine=='arm64'" }
tensorflow = "^2.13.0"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
scipy = "^1.13.0"
pillow = "^10.3.0"
scikit-learn = "^1.4.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
